--- a/src/app/conducteur/conducteur.component.scss
+++ b/src/app/conducteur/conducteur.component.scss
@@ -147,6 +147,25 @@ hr:after {
     .lis-bg-light {
       background-color: #00000005
   }
+  .btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
   
   section {
       padding-top: 6.25em;
