--- a/src/app/affectation/affectation.component.scss
+++ b/src/app/affectation/affectation.component.scss
@@ -15,7 +15,12 @@ table {
 {
     background-color: #FFFFFF;
 }
-
+.btnadd{
+  background-color: #ffffff;
+  border-color: #f8f8f8;
+  color: #000000;
+  border-radius: 0.25rem;
+}
 .modal-content
 {
     border-radius: 6px;
