--- a/src/app/conducteur/conducteur.component.html
+++ b/src/app/conducteur/conducteur.component.html
@@ -1,4 +1,7 @@
 <div class="main-content" id="main-container">
+
+
+<!--list conducteurs-->
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
@@ -8,21 +11,18 @@
                             <div class="col-md-4">
                               <h4 class="card-title  p-3">liste des conducteurs</h4>                   
                             </div> 
-                              <!-- search bar -->
+                           
                                 <div class="col-md-5 p-3">
-                        
-                                    <div class="row col-md-12">
-                                        <div class="row col-md-10">
+                           <!-- search bar -->
+                                    
                                             <form class="form-inline my-2 my-lg-0 search" >
                                                 <input type="search" (ngModelChange)="searchConducteurs(key.value)" 
                                                 #key="ngModel" ngModel
-                                                name="key" id="searchName" class="form-control form-input col-md-11"  
+                                                name="key" id="searchName" class="form-control  col-md-12"  
                                                 placeholder="Search..." autofocus required>
                                             </form>
                                         </div>
-                                    </div>
-                                </div>
-                            
+                                  
                             <div class="col-md-3 float-right p-3">
                                 <button  (click)="onOpenModal('add')" mat-raised-button class="btnadd pull-right" >
                                     <i class="fa fa-plus"></i> Ajouter conducteur
@@ -34,6 +34,7 @@
                         <div class="table-responsive">
                             <table class="table">
                                 <thead class=" text-primary">
+                                 
                                     <th>
                                         ID
                                     </th>
@@ -57,13 +58,14 @@
                                     </th>
                                 </thead>
                                 <tbody>
-                                    <tr class="clickable" (click)="onOpenModal('view',conducteur)"  *ngFor="let conducteur of conducteurs | paginate
+                                    <tr class="clickable " (click)="onOpenModal('view',conducteur)"  *ngFor="let conducteur of conducteurs | paginate
                                     : {
                                         itemsPerPage: tableSize,
                                         currentPage: page,
                                         totalItems: count
                                       };
                                 let i = index">
+                                
                                         <td>
                                           {{conducteur?.userId}}
                                         </td>
@@ -118,83 +120,100 @@
             <div class="modal-header">
                 <h5 class="modal-title">Ajouter conducteur</h5>
             </div>       
-            <div class="modal-body">
+            <div class="modal-body col-md-12">
                 <form #addForm="ngForm" (ngSubmit)="onUpload(addForm);">
-                    <div class="row block">
-                        <div class="col-md-3">
+                    <div class="row ">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-5">
                            
 
                           <mat-form-field class="example-full-width">
                               <input type="text" ngModel name="nom" matInput id="Nom" placeholder="Nom" required >
                             </mat-form-field>
-                        </div> <br> <br>
-                        <div class="col-md-3">
+                        </div> 
+                        <div class="col-md-5">
                             
                             <mat-form-field class="example-full-width">
                               <input matInput type="text" ngModel name="prenom"  id="Prenom" placeholder="Prenom" required>
                             </mat-form-field>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-1"></div>
+
+                    </div>
+                    <div class="space">
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-5">
                            
                             <mat-form-field class="example-full-width">
                               <input matInput type="text" ngModel name="numTel"  id="Telephone" placeholder="Telephone" required>
                             </mat-form-field>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-5">
                             
                             <mat-form-field class="example-full-width">
                               <input matInput type="email" ngModel name="contactEmail"  id="contactEmail" placeholder="Email" required >
                             </mat-form-field>
                         </div>
-                        <div class="col-md-3">
-                          
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="space">
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-5">
                             <mat-form-field class="example-full-width">
-                                <label >Genre :</label>
-                                <!-- <div>
-                                    <input type="radio" id="female" name="gender"  value="female"
-                                           >
-                                    <label for="female">Female</label>
-                                </div>
-                                <div>
-                                    <input type="radio" id="male" name="gender"  value="male">
-                                    <label for="male">Male</label>
-                                </div> -->
-                              <input matInput type="text" ngModel name="gender"  id="gender" placeholder="Gender" required >
-                            </mat-form-field>
+                                <input matInput type="text" ngModel name="categoriePermis"  id="Permis" placeholder="CategoriePermis" required >
+                              </mat-form-field>
                         </div>
-                        <div class="col-md-3">
-                            
-                            <mat-form-field class="example-full-width">
-                              <input matInput type="text" ngModel name="categoriePermis"  id="Permis" placeholder="CategoriePermis" required >
-                            </mat-form-field>
-                        </div>
-                        
-
-                        
-                        <div class="container row">
-                            <div class="col-md-12">
-                                <h1>Upload Image</h1>
+                        <div class="wrapper col-md-5">  
+                            <div class="space">
                             </div>
+                            <div class="space">
+                            </div>
+                                <div class="custom-control custom-radio">
+                                    <input id="male" type="radio" class="custom-control-input" value="Homme" name="gender" ngModel checked>
+                                    <label for="male" class="option male">
+                                        <div class="dot"></div>
+                                         <span> Homme</span>
+                                         </label>
+                                 </div>
+                                 <div class="custom-control custom-radio">
+                                    <input id="female" type="radio" class="custom-control-input" value="Femme" name="gender" ngModel>
+                                    <label for="female" class="option female">
+                                        <div class="dot"></div>
+                                         <span> Femme</span>
+                                      </label>
+                                 </div>
+                           
+                            
                         </div>
-                        <div class="container row">
-                            <div class="col-md-6">
-                                <input #addFormFileInput type="file" ngModel="{{editConducteur?.image?.id}}" name="image" (change)="onFileChanged($event)">
+                        <div class="col-md-1"></div>
+                    </div>
+                    <div class="space">
+                    </div>
+                   
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                            <div class="col-md-5">
+                                <label for="fileUpload">Upload file</label>
+                                <input id="fileUpload" #addFormFileInput type="file" ngModel="{{editConducteur?.image?.id}}" name="image" (change)="onFileChanged($event)">
+                            </div>
+                            <div class="col-md-5">  
                                 <img [src]=url>
                             </div>
+                            <div class="col-md-1"></div>
+                        </div>
+                        <div class="space">
+                        </div>
 
+                                 
+                    <div class="modal-footer justify-content-between">
+                        <a data-dismiss="modal" type="button" id="add-conducteur-form" class="btn btn-warning ml-auto" (click)="resetFile()" >Annuler</a>
+                        <div class="space">
                         </div>
-                        <hr />
-                        <div class="container row">
-                            <div class="col-md-12">
-                                <div *ngIf=message>{{message}}</div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                   
-                    <div class="modal-footer col-md-12">
-                        <a data-dismiss="modal" type="button" id="add-conducteur-form" class="btn btn-warning pull-right col-md-2" >Annuler</a>
-                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-success pull-right col-md-2">Sauvegarder</button>
+                        <button [disabled]="addForm.invalid" type="submit" class="btn btn-success mr-auto">Sauvegarder</button>
                      </div>
                     <div class="clearfix"></div>
                 </form>
@@ -264,7 +283,7 @@
                                                        
 
                                 <div class="modal-footer col-md-12">
-                                <button type="button" id="" data-dismiss="modal" class="btn btn-warning pull-right col-md-2">Annuler</button>
+                                <button type="button" id="" data-dismiss="modal" class="btn btn-warning pull-right col-md-2" (click)="resetFile()" >Annuler</button>
                                 <button  (click)="onEdit(editForm.value)"data-dismiss="modal" class="btn btn-success pull-right col-md-2" >Sauvegarder</button>
                                 </div>
                                 <div class="clearfix"></div>
