--- a/src/app/vehicule/vehicule.component.css
+++ b/src/app/vehicule/vehicule.component.css
@@ -21,20 +21,10 @@
     -moz-border-radius-bottomright: 6px;
 }
 
-.delete{
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    -webkit-border-top-left-radius: 6px;
-    -webkit-border-top-right-radius: 6px;
-    -moz-border-radius-topleft: 6px;
-    -moz-border-radius-topright: 6px;
-    background-color: #ef6454;
-    color: #FBFDFF;
-}
 .btnadd{
-    background-color: #ffb94d;
-    border-color: #ffb94d;
-    color: #FBFDFF;
+    background-color: #ffffff;
+    border-color: #f8f8f8;
+    color: #000000;
     border-radius: 0.25rem;
 }
 .modal-header
@@ -57,6 +47,8 @@ h4 {
   }
 .block{
     border-bottom:1px dashed rgba(0,0,0,.2); 
+    flex-basis: 100%;
+    padding: 25px 50px;
   }
 .engine{
     border-bottom: none;
@@ -139,3 +131,27 @@ hr:after {
     border-radius:.7rem;
     
   }
+
+  .delete{
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    -webkit-border-top-left-radius: 6px;
+    -webkit-border-top-right-radius: 6px;
+    -moz-border-radius-topleft: 6px;
+    -moz-border-radius-topright: 6px;
+    background-color: #ef6454;
+    color: #FBFDFF;
+}
+.tdName{
+  color: #5b5d63;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.64px;
+  margin-left: 12px;
+}
+
+
+.heading {
+
+  font-weight: bold;
+}
